[tool.poetry]
name = "pydmft"
version = "0.1.0"
description = "Python package for running post-CI DMFT calculations"
authors = ["Lukasz Mentel <lmmentel@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/lmmentel/pydmft"
repository = "https://github.com/lmmentel/pydmft"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.21.2"
matplotlib = "^3.4.3"
scipy = "^1.7.1"
chemtools = "^0.9.2"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
pylint = "^2.5.3"
pytest = "^3.0"
pytest-cov = "^2.4"
pytest-sugar = "^0.9.4"


[tool.black]
line-length = 88
target_version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
